# cargo-tizen

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
doc/: commands.md  configure-device.md  getting-started.md  install-tizen-sdk.md  linux-install.md  packaging-layout.md  packaging-model.md  quick-reference.md
docs/: README.md  architecture.md  commands.md  configuration.md  getting-started.md  install-linux.md  known-gaps.md  packaging-layout.md
docs/agents/: index.md  workflows.md
scripts/: check-agent-docs.sh  install.sh  release.sh
src/: arch.rs  arch_detect.rs  cargo_runner.rs  clean.rs  cli.rs  config.rs  config_cmd.rs  context.rs  device.rs  doctor.rs  fix.rs  gh_release.rs  init_cmd.rs  install_cmd.rs  main.rs  output.rs  package_select.rs  packaging.rs  run_cmd.rs  rust_target.rs  sdk.rs  tool_env.rs  tpk.rs
src/rpm/: mod.rs  rpmbuild.rs  spec.rs  stage.rs
src/sysroot/: cache.rs  mod.rs  provider.rs  repo.rs  rootstrap.rs  validate.rs
templates/: README.md  tizen.spec.hbs
templates/reference-projects/rpm-app/: .cargo-tizen.toml  Cargo.toml
templates/reference-projects/rpm-app/src/: main.rs
templates/reference-projects/rpm-multi-package/: .cargo-tizen.toml  Cargo.toml
templates/reference-projects/rpm-service-app/: .cargo-tizen.toml  Cargo.toml
templates/reference-projects/rpm-syslibs/: .cargo-tizen.toml  Cargo.toml  README.md
templates/reference-projects/tpk-service-app/: .cargo-tizen.toml  Cargo.toml
tests/: reference_projects.rs  sdk_integration.rs
tests/common/: mod.rs
(+17 files in other folders)
