[package]
name = "cargo-tizen"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
basic-toml = "0.1"
which = "7.0"
roxmltree = "0.20"

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
tempfile = "3"
